aws/7.6/gwlb-transit BIMB/fgtvm3.tf
// FGTVM instance AZ3

resource "aws_network_interface" "fgt3eth0" {
  description = "fgtvm3-port1"
  subnet_id   = aws_subnet.publicsubnetaz3.id
}

resource "aws_network_interface" "fgt3eth1" {
  description       = "fgtvm3-port2"
  subnet_id         = aws_subnet.privatesubnetaz3.id
  source_dest_check = false
}

data "aws_network_interface" "fgt3eth1" {
  id = aws_network_interface.fgt3eth1.id
}

//
data "aws_network_interface" "vpcendpointipaz3" {
  depends_on = [aws_vpc_endpoint.gwlbendpointfgt]
  filter {
    name   = "vpc-id"
    values = ["${aws_vpc.fgtvm-vpc.id}"]
  }
  filter {
    name   = "status"
    values = ["in-use"]
  }
  filter {
    name   = "description"
    values = ["*ELB*"]
  }
  filter {
    name   = "availability-zone"
    values = ["${var.az3}"]
  }
}

resource "aws_network_interface_sg_attachment" "fgt3publicattachment" {
  depends_on           = [aws_network_interface.fgt3eth0]
  security_group_id    = aws_security_group.public_allow.id
  network_interface_id = aws_network_interface.fgt3eth0.id
}

resource "aws_network_interface_sg_attachment" "fgt3internalattachment" {
  depends_on           = [aws_network_interface.fgt3eth1]
  security_group_id    = aws_security_group.allow_all.id
  network_interface_id = aws_network_interface.fgt3eth1.id
}

# Cloudinit config in MIME format
data "cloudinit_config" "config3" {
  gzip          = false
  base64_encode = false

  part {
    filename     = "license"
    content_type = "text/plain"
    content      = var.license_format == "token" ? "LICENSE-TOKEN:${chomp(file("${var.licenses[2]}"))} INTERVAL:4 COUNT:4" : "${file("${var.licenses[2]}")}" 
  }

  # Main cloud-config configuration file.
  part {
    filename     = "config"
    content_type = "text/x-shellscript"
    content = templatefile("${var.bootstrap-fgtvm3}", {
      adminsport = "${var.adminsport}"
      cidr       = "${var.privatecidraz1}"
      gateway    = cidrhost(var.privatecidraz3, 1)
      endpointip = "${data.aws_network_interface.vpcendpointipaz3.private_ip}"
    })
  }
}

resource "aws_instance" "fgtvm3" {
  //it will use region, architect, and license type to decide which ami to use for deployment
  ami               = var.fgtami[var.region][var.arch][var.license_type]
  instance_type     = var.size
  availability_zone = var.az3
  key_name          = var.keyname

  user_data = var.bucket ? (var.license_format == "file" ? "${jsonencode({ bucket = aws_s3_bucket.s3_bucket[0].id,
    region                        = var.region,
    license                       = var.licenses[2],
    config                        = "${var.bootstrap-fgtvm}3"
    })}" : "${jsonencode({ bucket = aws_s3_bucket.s3_bucket[0].id,
    region                        = var.region,
    license-token                 = file("${var.licenses[2]}"),
    config                        = "${var.bootstrap-fgtvm}3"
  })}") : "${data.cloudinit_config.config3.rendered}"

  iam_instance_profile = var.bucket ? aws_iam_instance_profile.fortigate[0].id : ""

  root_block_device {
    volume_type = "gp2"
    volume_size = "2"
  }

  ebs_block_device {
    device_name = "/dev/sdb"
    volume_size = "30"
    volume_type = "gp2"
  }

  primary_network_interface {
    network_interface_id = aws_network_interface.fgt3eth0.id
  }

  tags = {
    Name = "FortiGateVM3"
  }
}

resource "aws_network_interface_attachment" "fgt3eth1-attach" {
  instance_id          = aws_instance.fgtvm3.id
  network_interface_id = aws_network_interface.fgt3eth1.id
  device_index         = 1
}
